# solana-poker

./: .gitignore  Anchor.toml  README.md  commands.md  inco.md  out.txt  package-lock.json  package.json
app/: package.json
app/src/app/: layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/raffle/: page.tsx
app/src/app/raffle/[id]/: page.tsx
app/src/components/: connect-wallet.tsx  navbar.tsx  tx-link.tsx  wallet-button.tsx  wallet-connection-wrapper.tsx  wallet-provider.tsx
app/src/hooks/: useProgram.ts  useRaffle.ts
app/src/lib/: idl.json  program.ts
app/src/types/: raffle.ts
app/src/utils/: constants.ts
programs/private-raffle/: Cargo.toml
programs/private-raffle/src/: constants.rs  error.rs  lib.rs
programs/private-raffle/src/instructions/: buy_ticket.rs  check_winner.rs  create_raffle.rs  draw_winner.rs  mod.rs  withdraw_prize.rs
programs/private-raffle/src/state/: mod.rs
programs/solana-poker/: Cargo.toml
programs/solana-poker/src/: advance_stage.rs  constants.rs  create_table.rs  error.rs  join_table.rs  leave_table.rs  lib.rs  mod.rs  process_cards.rs  refund_all.rs  reveal_card_offset.rs  reveal_community.rs  reveal_hand.rs  reveal_shuffle_random.rs  settle_game.rs  start_game.rs  update_round.rs
programs/solana-poker/src/state/: mod.rs  player_seat.rs  poker_game.rs  poker_table.rs
tests/: private-raffle.ts  solana-poker.demo.ts  solana-poker.flow.ts  solana-poker.ts
