[package]
name = "solana-poker"
version = "0.1.0"
description = "Confidential Texas Hold'em Poker on Solana using Inco"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_poker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
